k8S/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fastapi-service
  labels:
    app: my-fastapi
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-fastapi
